# hailo-camera-app-suite

apps/h15/gstreamer/internals/frontend_pipelines/: defog.sh
apps/h15/gstreamer/internals/frontend_pipelines/configs/: frontend_config.json  frontend_config_various.json
apps/h15/gstreamer/internals/validation_apps_configs/configs/: stress_encoder_sink0.json  stress_encoder_sink1.json  stress_encoder_sink2.json  stress_frontend_config.json
apps/h15/gstreamer/webserver/configs/: frontend_config.json
apps/h15/native/: meson.build
apps/h15/native/ai_example_app/: README.rst  main.cpp
apps/h15/native/reference_camera_api/: reference_camera_infra.cpp
apps/h15/native/reference_camera_api/pipeline_infra/: ai_stage.hpp  frontend_stage.hpp
apps/h15/native/webserver/: main.cpp
apps/h15/native/webserver/common/httplib/: httplib_utils.cpp  httplib_utils.hpp
apps/h15/native/webserver/pipeline/: pipeline.cpp
apps/h15/native/webserver/resources/: ai.cpp  encoder.cpp  frontend.cpp  isp.cpp  osd.cpp  privacy_mask.cpp  repository.cpp  resources.hpp  webrtc.cpp
core/hailo/: meson.build
core/hailo/apps/hailo15/chaos_app/: chaos_app.cpp  meson.build
core/hailo/apps/hailo15/chaos_app/utils/: scenarios.hpp  vision_config_changes.hpp
core/hailo/apps/hailo15/eis_stress/: eis_stress.cpp
core/hailo/apps/hailo15/stress_app/: stress_app.cpp
